ui-client/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8085
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: grpc_web
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: grpc_server
                  timeout: 0s
                  max_stream_duration:
                    grpc_timeout_header_max: 300s
                  retry_policy:
                    retry_on: connect-failure,refused-stream,gateway-error,deadline-exceeded,unavailable
                    num_retries: 2
              cors:
                allow_origin_string_match:
                  - safe_regex:
                      google_re2: {}
                      regex: ".*"  # Consider making this more restrictive for security
                allow_methods: "GET, PUT, DELETE, POST, OPTIONS"
                allow_headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,x-user-agent, x-grpc-web, client-id"
                expose_headers: "Content-Length,Content-Range"
                allow_credentials: true
          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router

  clusters:
  - name: grpc_server
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: grpc_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 50051
